# birdwatcher

./: .gitignore  .goreleaser-darwin.yaml  .goreleaser-linux.yaml  .goreleaser-release.yaml  .goreleaser.yaml  demo.json  go.mod
.github/workflows/: build-wheels.yml  release.yaml
python/: .gitignore  README.md  hatch_build.py  pyproject.toml
python/pybirdwatcher/: __init__.py  binary.py  cli.py  client.py  models.py
python/scripts/: build_all_platforms.sh  build_binary.sh
states/etcd/show/: collection.go  segment.go
