[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pybirdwatcher"
dynamic = ["version"]
description = "Python wrapper for Birdwatcher - Milvus debug and diagnostic tool"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Milvus Team" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: System :: Monitoring",
]
keywords = ["milvus", "debug", "diagnostic", "etcd", "vector-database"]

[project.urls]
Homepage = "https://github.com/milvus-io/birdwatcher"
Repository = "https://github.com/milvus-io/birdwatcher"

[project.scripts]
pybirdwatcher = "pybirdwatcher.cli:main"

[tool.hatch.version]
path = "pybirdwatcher/version.py"

[tool.hatch.build.targets.wheel]
packages = ["pybirdwatcher"]

# Custom build hook to compile Go binary and set platform tag
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

# Include the bin directory with the compiled binary
[tool.hatch.build.targets.wheel.force-include]
"pybirdwatcher/bin" = "pybirdwatcher/bin"

[tool.hatch.build.targets.sdist]
include = [
    "pybirdwatcher/**/*.py",
    "README.md",
    "LICENSE",
]
# Don't include binaries in sdist - they're built separately
exclude = [
    "pybirdwatcher/bin/*",
]
